# dspy-playground

./: README.md  annotated-results-only-score.json  evaluator.py  main.py  pyproject.toml
dataset/: data.yaml
