[project]
name = "dspy-tryout"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.0.0",
    "langfuse>=3.5.0",
    "openinference-instrumentation-dspy>=0.1.29",
    "py-dotenv>=0.1",
    "dspy @ git+https://github.com/stanfordnlp/dspy.git@main",
]